--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <main>
     <section class="header">
       <nav class="mobile-nav-wrapper">
-        <img src="/Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
-        <img src="/Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
-        <img src="/Assets/Images/bag.svg" class="cart" alt="cart" />
+        <img src="Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
+        <img src="Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
+        <img src="Assets/Images/bag.svg" class="cart" alt="cart" />
       </nav>
       <nav class="dekstop-nav-wrapper">
         <ul>
@@ -44,15 +44,15 @@
         <div class="iphone14_links">
           <div class="learn_more">
             <a class="link_learn"> Learn more </a>
-            <img src="/Assets/Images/right.svg" />
+            <img src="Assets/Images/right.svg" />
           </div>
           <div class="buy">
             <a class="buy_link"> Buy </a>
-            <img src="/Assets/Images/right.svg" />
+            <img src="Assets/Images/right.svg" />
           </div>
         </div>
         <div class="iphone_image_wrapper">
-          <img src="/Assets/Images/Iphone_14.jpg" />
+          <img src="Assets/Images/Iphone_14.jpg" />
         </div>
       </main>
     </section>
@@ -63,15 +63,15 @@
         <div class="iphone14_links">
           <div class="learn_more">
             <a class="link_learn"> Learn more </a>
-            <img src="/Assets/Images/right.svg" />
+            <img src="Assets/Images/right.svg" />
           </div>
           <div class="buy">
             <a class="buy_link"> Buy </a>
-            <img src="/Assets/Images/right.svg" />
+            <img src="Assets/Images/right.svg" />
           </div>
         </div>
         <div class="iphone14pro-hero">
-          <img src="/Assets//Images/i14pro.jpeg" alt="pro" />
+          <img src="Assets//Images/i14pro.jpeg" alt="pro" />
         </div>
       </div>
     </section>
@@ -84,15 +84,15 @@
           <div class="iphone14_links">
             <div class="learn_more">
               <a class="link_learn"> Learn more </a>
-              <img src="/Assets/Images/right.svg" />
+              <img src="Assets/Images/right.svg" />
             </div>
             <div class="buy">
               <a class="buy_link"> Buy </a>
-              <img src="/Assets/Images/right.svg" />
+              <img src="Assets/Images/right.svg" />
             </div>
           </div>
           <div class="smart-watch-1-image">
-            <img src="/Assets/Images/smartWatch1.jpg" alt="smart-watch">
+            <img src="Assets/Images/smartWatch1.jpg" alt="smart-watch">
           </div>
         </div>
         <div class="watch-1-wrapper">
@@ -102,15 +102,15 @@
           <div class="iphone14_links">
             <div class="learn_more">
               <a class="link_learn"> Learn more </a>
-              <img src="/Assets/Images/right.svg" />
+              <img src="Assets/Images/right.svg" />
             </div>
             <div class="buy">
               <a class="buy_link"> Buy </a>
-              <img src="/Assets/Images/right.svg" />
+              <img src="Assets/Images/right.svg" />
             </div>
           </div>
           <div class="smart-watch-1-image">
-            <img src="/Assets/Images/smartWatch1.jpg" alt="smart-watch">
+            <img src="Assets/Images/smartWatch1.jpg" alt="smart-watch">
           </div>
         </div>
       </div>
