--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <ul>
           <li><img src="Assets/Images/apple.svg" alt="apple" /></li>
            <li><a href="#">Store</a></li>
-                    <li><a href="/src/mac.html">Mac</a></li>
+                    <li><a href="src/mac.html">Mac</a></li>
                     <li>iPad</li>
                     <li>iPhone</li>
-                    <li><a href="/src/watch.html">Watch</a></li>
+                    <li><a href="src/watch.html">Watch</a></li>
                     <li>AirPods</li>
-                    <li><a href="/src/tv&home.html">TV & Home</a></li>
-                    <li><a href="/src/contactus.html">Contact Us</a></li>
-                    <li><a href="/src/accessories.html">Accessories</a></li>
-                    <li><a href="/src/login.html">Login</a></li>
+                    <li><a href="src/tv&home.html">TV & Home</a></li>
+                    <li><a href="src/contactus.html">Contact Us</a></li>
+                    <li><a href="src/accessories.html">Accessories</a></li>
+                    <li><a href="src/login.html">Login</a></li>
           <li><img src="Assets/Images/search1.svg" /></li>
         </ul>
       </nav>
