--- a/src/watch.html
+++ b/src/watch.html
@@ -7,65 +7,65 @@
   <title></title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/Assets/Style/watch.css" />
+  <link rel="stylesheet" href="Assets/Style/watch.css" />
 </head>
 
 <body>
   <main>
     <section class="homescreen">
       <nav class="mobile-nav-wrapper">
-        <img src="/Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
-        <img src="/Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
-        <img src="/Assets/Images/bag.svg" class="cart" alt="cart" />
+        <img src="Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
+        <img src="Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
+        <img src="Assets/Images/bag.svg" class="cart" alt="cart" />
       </nav>
       <nav class="dekstop-nav-wrapper">
         <ul>
-          <li><a href="/index.html"><img src="/Assets/Images/apple.svg" alt="apple" /></a></li>
+          <li><a href="index.html"><img src="Assets/Images/apple.svg" alt="apple" /></a></li>
           <li><a href="#">Store</a></li>
-          <li><a href="/src/mac.html">Mac</a></li>
+          <li><a href="src/mac.html">Mac</a></li>
           <li>iPad</li>
           <li>iPhone</li>
-          <li><a href="/src/watch.html">Watch</a></li>
+          <li><a href="src/watch.html">Watch</a></li>
           <li>AirPods</li>
-          <li><a href="/src/tv&home.html">TV & Home</a></li>
-          <li><a href="/src/contactus.html">Contact Us</a></li>
-          <li><a href="/src/accessories.html">Accessories</a></li>
-          <li><a href="/src/login.html">Login</a></li>
-          <li><img src="/Assets/Images/search1.svg" /></li>
+          <li><a href="src/tv&home.html">TV & Home</a></li>
+          <li><a href="src/contactus.html">Contact Us</a></li>
+          <li><a href="src/accessories.html">Accessories</a></li>
+          <li><a href="src/login.html">Login</a></li>
+          <li><img src="Assets/Images/search1.svg" /></li>
         </ul>
       </nav>
       <nav class="dekstop-nav-wrapper2">
         <ul>
           <div>
-            <li><img src="/Assets/Images/watch_ultra.svg" alt="Ultra"></li>
+            <li><img src="Assets/Images/watch_ultra.svg" alt="Ultra"></li>
             Apple Watch Ultra
           </div>
           <div>
-            <li><img src="/Assets/Images/watch_series.svg" alt="Series"></li>
+            <li><img src="Assets/Images/watch_series.svg" alt="Series"></li>
             Apple Watch Series 8
           </div>
           <div>
-            <li><img src="/Assets/Images/watch_se.svg" alt="SE"></li>
+            <li><img src="Assets/Images/watch_se.svg" alt="SE"></li>
             Apple Watch SE
           </div>
           <div>
-            <li><img src="/Assets/Images/watch_nike_.svg" alt="Nike"></li>
+            <li><img src="Assets/Images/watch_nike_.svg" alt="Nike"></li>
             Apple Watch Nike
           </div>
           <div>
-            <li><img src="/Assets/Images/watch_hermes.svg" alt="Hermes"></li>
+            <li><img src="Assets/Images/watch_hermes.svg" alt="Hermes"></li>
             Apple Watch Hermes
           </div>
           <div>
-            <li><img src="/Assets/Images/watch_studio.svg" alt="Studio"></li>
+            <li><img src="Assets/Images/watch_studio.svg" alt="Studio"></li>
             Apple Watch Studio
           </div>
           <div>
-            <li><img src="/Assets/Images/watch_compare.svg" alt="Compare"></li>
+            <li><img src="Assets/Images/watch_compare.svg" alt="Compare"></li>
             Compare
           </div>
           <div>
-            <li><img src="/Assets/Images/watch_airpods.svg" alt="Airpods"></li>
+            <li><img src="Assets/Images/watch_airpods.svg" alt="Airpods"></li>
             Airpods
           </div>
         </ul>
@@ -81,18 +81,18 @@
               <a class="link_learn2">
                 Learn more
               </a>
-              <img src="/Assets/Images/right.svg">
+              <img src="Assets/Images/right.svg">
             </div>
             <div class="buy2">
               <a class="buy_link2">
                 Buy
               </a>
-              <img src="/Assets/Images/right.svg">
+              <img src="Assets/Images/right.svg">
             </div>
 
           </div>
           <div class="iphone14pro-hero2">
-            <img src="/Assets/Images/hero_ultra.jpg" alt="Altra">
+            <img src="Assets/Images/hero_ultra.jpg" alt="Altra">
           </div>
         </div>
       </section>
@@ -110,18 +110,18 @@
               <a class="link_learn3">
                 Learn more
               </a>
-              <img src="/Assets/Images/right.svg">
+              <img src="Assets/Images/right.svg">
             </div>
             <div class="buy3">
               <a class="buy_link3">
                 Buy
               </a>
-              <img src="/Assets/Images/right.svg">
+              <img src="Assets/Images/right.svg">
             </div>
 
           </div>
           <div class="iphone14pro-hero3">
-            <img src="/Assets/Images/tile_s8.jpg" alt="Tile">
+            <img src="Assets/Images/tile_s8.jpg" alt="Tile">
           </div>
         </div>
       </section>
@@ -134,9 +134,9 @@
         <table>
           <caption>Which Apple Watch is Right for you?</caption>
           <tr>
-            <th><img src="/Assets/Images/s8_black.jpg" alt="Black Watch"></th>
-            <th><img src="/Assets/Images/se__white.jpg" alt="White Watch"></th>
-            <th><img src="/Assets/Images/ultra__orange.jpg" alt="Orange"></th>
+            <th><img src="Assets/Images/s8_black.jpg" alt="Black Watch"></th>
+            <th><img src="Assets/Images/se__white.jpg" alt="White Watch"></th>
+            <th><img src="Assets/Images/ultra__orange.jpg" alt="Orange"></th>
           </tr>
 
           <tr>
@@ -172,9 +172,9 @@
           </tr>
 
           <tr>
-            <td><img src="/Assets/Images/black_s8.png" alt="Black"></td>
-            <td><img src="/Assets/Images/retina_display.png" alt="Ratina"></td>
-            <td><img src="/Assets/Images/retina_ultra.png" alt=""></td>
+            <td><img src="Assets/Images/black_s8.png" alt="Black"></td>
+            <td><img src="Assets/Images/retina_display.png" alt="Ratina"></td>
+            <td><img src="Assets/Images/retina_ultra.png" alt=""></td>
           </tr>
 
           <tr>
