--- a/src/login.html
+++ b/src/login.html
@@ -5,7 +5,7 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../Style/login.css" rel="stylesheet">
+    <link href="../Assets/Style/login.css" rel="stylesheet">
 </head>
 
 <body>
