--- a/src/tv&home.html
+++ b/src/tv&home.html
@@ -7,7 +7,7 @@
   <title>TV & Home</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/Assets/Style/tv&home.css" />
+  <link rel="stylesheet" href="../Assets/Style/tv&home.css" />
 </head>
 
 <body>
