--- a/src/mac.html
+++ b/src/mac.html
@@ -7,7 +7,7 @@
   <title></title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="Assets/Style/macstyle.css" />
+  <link rel="stylesheet" href="../Assets/Style/macstyle.css" />
 </head>
 
 <body>
