--- a/src/accessories.html
+++ b/src/accessories.html
@@ -7,7 +7,7 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/Assets/Style/accessories.css" />
+    <link rel="stylesheet" href="../Assets/Style/accessories.css" />
 </head>
 
 <body>
