--- a/src/accessories.html
+++ b/src/accessories.html
@@ -14,24 +14,24 @@
     <main>
         <section class="homescreen">
             <nav class="mobile-nav-wrapper">
-                <img src="/Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
-                <img src="/Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
-                <img src="/Assets/Images/bag.svg" class="cart" alt="cart" />
+                <img src="../Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
+                <img src="../Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
+                <img src="../Assets/Images/bag.svg" class="cart" alt="cart" />
             </nav>
             <nav class="dekstop-nav-wrapper">
                 <ul>
-                    <li><a href="/index.html"><img src="/Assets/Images/apple.svg" alt="apple" /></a></li>
+                    <li><a href="../index.html"><img src="../Assets/Images/apple.svg" alt="apple" /></a></li>
                     <li><a href="#">Store</a></li>
-                    <li><a href="/src/mac.html">Mac</a></li>
+                    <li><a href="../src/mac.html">Mac</a></li>
                     <li>iPad</li>
                     <li>iPhone</li>
-                    <li><a href="/src/watch.html">Watch</a></li>
+                    <li><a href="../src/watch.html">Watch</a></li>
                     <li>AirPods</li>
-                    <li><a href="/src/tv&home.html">TV & Home</a></li>
-                    <li><a href="/src/contactus.html">Contact Us</a></li>
-                    <li><a href="/src/accessories.html">Accessories</a></li>
-                    <li><a href="/src/login.html">Login</a></li>
-                    <li><img src="/Assets/Images/search1.svg" /></li>
+                    <li><a href="../src/tv&home.html">TV & Home</a></li>
+                    <li><a href="../src/contactus.html">Contact Us</a></li>
+                    <li><a href="../src/accessories.html">Accessories</a></li>
+                    <li><a href="../src/login.html">Login</a></li>
+                    <li><img src="../Assets/Images/search1.svg" /></li>
                 </ul>
             </nav>
         </section>
@@ -44,7 +44,7 @@
                 <h2>Holiday Gifts</h2>
                 <div class="class12">
                     <div class="class8">
-                        <img src="/Assets/Images/img1.png">
+                        <img src="../Assets/Images/img1.png">
                         <div class="class10">
                             <p>AirPods(2nd generation)</p>
                             <p>From ฿179.00</p>
@@ -52,7 +52,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img2.png">
+                        <img src="../Assets/Images/img2.png">
                         <div class="class10">
                             <p>Apple Pencil(2nd generation)</p>
                             <p>From ฿169.00</p>
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img3.png">
+                        <img src="../Assets/Images/img3.png">
                         <div class="class10">
                             <p>MagSafe Battery Pack</p>
                             <p>From ฿119.00</p>
@@ -68,7 +68,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img4.png">
+                        <img src="../Assets/Images/img4.png">
                         <div class="class10">
                             <p>Apple Watch Magnetic Fast Charger to USB-C Cabe</p>
                             <p>From ฿39.00</p>
@@ -83,7 +83,7 @@
                 <h2>Featured iPhone Accessories</h2>
                 <div class="class12">
                     <div class="class8">
-                        <img src="/Assets/Images/img11.png">
+                        <img src="../Assets/Images/img11.png">
                         <div class="class10">
                             <p>iPhone 14 Silicone Case with Magsafe-Lilac</p>
                             <p>From ฿69.00</p>
@@ -91,7 +91,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img12.png">
+                        <img src="../Assets/Images/img12.png">
                         <div class="class10">
                             <p>Magsafe Charger</p>
                             <p>From ฿55.00</p>
@@ -99,7 +99,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img13.png">
+                        <img src="../Assets/Images/img13.png">
                         <div class="class10">
                             <p>iPhone 14 Pro Max Leather Case with Magsafe-Ink</p>
                             <p>From ฿79.00</p>
@@ -107,7 +107,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img14.png">
+                        <img src="../Assets/Images/img14.png">
                         <div class="class10">
                             <p>iPhone Leather Wallet with MagSafe- Forest Green</p>
                             <p>From ฿79.00</p>
@@ -115,7 +115,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img15.png">
+                        <img src="../Assets/Images/img15.png">
                         <div class="class10">
                             <p>MagSafe Duo Charger</p>
                             <p>From ฿169.00</p>
@@ -123,7 +123,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img16.png">
+                        <img src="../Assets/Images/img16.png">
                         <div class="class10">
                             <p>OtterBox Figura Series Case with MagSafe for iphone 14 - Multicolor</p>
                             <p>From ฿59.95</p>
@@ -138,7 +138,7 @@
                 <h2>Featured iPad Accessories</h2>
                 <div class="class12">
                     <div class="class8">
-                        <img src="/Assets/Images/img21.png">
+                        <img src="../Assets/Images/img21.png">
                         <div class="class10">
                             <p>Magic Keyboard Folio for iPad</p>
                             <p>From ฿329.00</p>
@@ -146,7 +146,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img22.png">
+                        <img src="../Assets/Images/img22.png">
                         <div class="class10">
                             <p>Apple Pencil</p>
                             <p>From ฿129.00</p>
@@ -154,7 +154,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img23.png">
+                        <img src="../Assets/Images/img23.png">
                         <div class="class10">
                             <p>Magic Keyboard for iPad Pro 12.9 inch</p>
                             <p>From ฿449.00</p>
@@ -162,7 +162,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img24.png">
+                        <img src="../Assets/Images/img24.png">
                         <div class="class10">
                             <p>USB-C to Apple Pencil Adapter</p>
                             <p>From ฿10.00</p>
@@ -170,7 +170,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img25.png">
+                        <img src="../Assets/Images/img25.png">
                         <div class="class10">
                             <p>Smart Folio for iPad - Watermelon</p>
                             <p>From ฿99.00</p>
@@ -178,7 +178,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img26.png">
+                        <img src="../Assets/Images/img26.png">
                         <div class="class10">
                             <p>Smart Folio for iPad mini - Black</p>
                             <p>From ฿75.00</p>
@@ -194,7 +194,7 @@
                 <h2>Apple Watch Brands</h2>
                 <div class="class12">
                     <div class="class8">
-                        <img src="/Assets/Images/img31.png">
+                        <img src="../Assets/Images/img31.png">
                         <div class="class10">
                             <p>Elderberry Sport Loop</p>
                             <p>From ฿59.00</p>
@@ -202,7 +202,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img32.png">
+                        <img src="../Assets/Images/img32.png">
                         <div class="class10">
                             <p>Rainforest Braided Solo Loop</p>
                             <p>From ฿129.00</p>
@@ -210,7 +210,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img33.png">
+                        <img src="../Assets/Images/img33.png">
                         <div class="class10">
                             <p>Succulent Solo Loop</p>
                             <p>From ฿59.00</p>
@@ -218,7 +218,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img34.png">
+                        <img src="../Assets/Images/img34.png">
                         <div class="class10">
                             <p>Graphite Milanese Loop</p>
                             <p>From ฿129.00</p>
@@ -226,7 +226,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img35.png">
+                        <img src="../Assets/Images/img35.png">
                         <div class="class10">
                             <p>Umber Leather Link</p>
                             <p>From ฿129.00</p>
@@ -234,7 +234,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img36.png">
+                        <img src="../Assets/Images/img36.png">
                         <div class="class10">
                             <p>Olive Grey/ Black Nike Sport Band</p>
                             <p>From ฿59.00</p>
@@ -250,7 +250,7 @@
                 <h2>AirTag</h2>
                 <div class="class12">
                     <div class="class8">
-                        <img src="/Assets/Images/img41.png">
+                        <img src="../Assets/Images/img41.png">
                         <div class="class10">
                             <p>AirTag</p>
                             <p>From ฿39.00</p>
@@ -258,7 +258,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img42.png">
+                        <img src="../Assets/Images/img42.png">
                         <div class="class10">
                             <p>Air Tag Leather Key Ring -Forest Green</p>
                             <p>From ฿49.00</p>
@@ -266,7 +266,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img43.png">
+                        <img src="../Assets/Images/img43.png">
                         <div class="class10">
                             <p>AirTag Leather Loop- Saddle Brown</p>
                             <p>From ฿59.00</p>
@@ -274,7 +274,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img44.png">
+                        <img src="../Assets/Images/img44.png">
                         <div class="class10">
                             <p>OtterBox Rugged Case for AirTag</p>
                             <p>From ฿24.95</p>
@@ -282,7 +282,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img45.png">
+                        <img src="../Assets/Images/img45.png">
                         <div class="class10">
                             <p>AirTag Hermes Key Ring- Maison</p>
                             <p>From ฿449.00</p>
@@ -290,7 +290,7 @@
                     </div>
 
                     <div class="class8">
-                        <img src="/Assets/Images/img46.png">
+                        <img src="../Assets/Images/img46.png">
                         <div class="class10">
                             <p>Belkin Secure Holder with Carabiner for AirTag</p>
                             <p>From ฿24.95</p>
