--- a/src/login.html
+++ b/src/login.html
@@ -12,24 +12,24 @@
     <main>
         <section class="header">
             <nav class="mobile-nav-wrapper">
-                <img src="/Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
-                <img src="/Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
-                <img src="/Assets/Images/bag.svg" class="cart" alt="cart" />
+                <img src="../Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
+                <img src="../Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
+                <img src="../Assets/Images/bag.svg" class="cart" alt="cart" />
             </nav>
             <nav class="dekstop-nav-wrapper">
                 <ul>
-                    <li><a href="/index.html"><img src="/Assets/Images/apple.svg" alt="apple" /></a></li>
+                    <li><a href="../index.html"><img src="../Assets/Images/apple.svg" alt="apple" /></a></li>
                     <li><a href="#">Store</a></li>
-                    <li><a href="/src/mac.html">Mac</a></li>
+                    <li><a href="../Assets/src/mac.html">Mac</a></li>
                     <li>iPad</li>
                     <li>iPhone</li>
-                    <li><a href="/src/watch.html">Watch</a></li>
+                    <li><a href="../Assets/src/watch.html">Watch</a></li>
                     <li>AirPods</li>
-                    <li><a href="/src/tv&home.html">TV & Home</a></li>
-                    <li><a href="/src/contactus.html">Contact Us</a></li>
-                    <li><a href="/src/accessories.html">Accessories</a></li>
-                    <li><a href="/src/login.html">Login</a></li>
-                    <li><img src="/Assets/Images/search1.svg" /></li>
+                    <li><a href="../Assets/src/tv&home.html">TV & Home</a></li>
+                    <li><a href="../Assets/src/contactus.html">Contact Us</a></li>
+                    <li><a href="../Assets/src/accessories.html">Accessories</a></li>
+                    <li><a href="../Assets/src/login.html">Login</a></li>
+                    <li><img src="../Assets/Images/search1.svg" /></li>
                 </ul>
             </nav>
         </section>
