--- a/src/mac.html
+++ b/src/mac.html
@@ -14,70 +14,70 @@
   <main>
     <section class="homescreen">
       <nav class="mobile-nav-wrapper">
-        <img src="Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
-        <img src="Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
-        <img src="Assets/Images/bag.svg" class="cart" alt="cart" />
+        <img src="../Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
+        <img src="../Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
+        <img src="../Assets/Images/bag.svg" class="cart" alt="cart" />
       </nav>
       <nav class="dekstop-nav-wrapper">
         <ul>
-          <li><a href="index.html"><img src="/Assets/Images/apple.svg" alt="apple" /></a></li>
+          <li><a href="../index.html"><img src="../Assets/Images/apple.svg" alt="apple" /></a></li>
           <li><a href="#">Store</a></li>
-          <li><a href="src/mac.html">Mac</a></li>
+          <li><a href="../Assets/src/mac.html">Mac</a></li>
           <li>iPad</li>
           <li>iPhone</li>
-          <li><a href="src/watch.html">Watch</a></li>
+          <li><a href="../Assets/src/watch.html">Watch</a></li>
           <li>AirPods</li>
-          <li><a href="src/tv&home.html">TV & Home</a></li>
-          <li><a href="src/contactus.html">Contact Us</a></li>
-          <li><a href="src/accessories.html">Accessories</a></li>
-          <li><a href="src/login.html">Login</a></li>
-          <li><img src="Assets/Images/search1.svg" /></li>
+          <li><a href="../Assets/src/tv&home.html">TV & Home</a></li>
+          <li><a href="./Assets/src/contactus.html">Contact Us</a></li>
+          <li><a href="../Assets/src/accessories.html">Accessories</a></li>
+          <li><a href="../Assets/src/login.html">Login</a></li>
+          <li><img src="../Assets/Images/search1.svg" /></li>
         </ul>
       </nav>
       <nav class="dekstop-nav2-wrapper">
         <ul>
           <div>
-            <li><img src="Assets/Images/air.svg" alt="macbook air"></li>
+            <li><img src="../Assets/Images/air.svg" alt="macbook air"></li>
             <a href="#">Macbook Air</a>
           </div>
           <div>
-            <li><img src="Assets/Images/airpro.svg" alt="macbook air"></li>
+            <li><img src="../Assets/Images/airpro.svg" alt="macbook air"></li>
             <a href="#">Macbook Pro</a>
           </div>
           <div>
-            <li><img src="Assets/Images/imac.svg" alt="macbook air"></li>
+            <li><img src="../Assets/Images/imac.svg" alt="macbook air"></li>
             <a href="#">Imac 24"</a>
           </div>
           <div>
-            <li><img src="Assets/Images/macmini.svg" alt="macbook air"></li>
+            <li><img src="../Assets/Images/macmini.svg" alt="macbook air"></li>
             <a href="#">Mac Mini</a>
           </div>
           <div>
-            <li><img src="Assets/Images/macstudio.svg" alt="macbook air"></li>
+            <li><img src="../Assets/Images/macstudio.svg" alt="macbook air"></li>
             <a href="#">Mac Studio</a>
           </div>
           <div>
-            <li><img src="Assets/Images/macpro.svg" alt="macbook air"></li>
+            <li><img src="../Assets/Images/macpro.svg" alt="macbook air"></li>
             <a href="#">Mac Pro</a>
           </div>
           <div>
-            <li><img src="Assets/Images/Compare.svg" alt="macbook air"></li>
+            <li><img src="../Assets/Images/Compare.svg" alt="macbook air"></li>
             <a href="#">Compare</a>
           </div>
           <div>
-            <li><img src="Assets/Images/Displays.svg" alt="macbook air"></li>
+            <li><img src="../Assets/Images/Displays.svg" alt="macbook air"></li>
             <a href="#">Displays</a>
           </div>
           <div>
-            <li><img src="Assets/Images/accesories.svg" alt="macbook air"></li>
+            <li><img src="../Assets/Images/accesories.svg" alt="macbook air"></li>
             <a href="#">Accesories</a>
           </div>
           <div>
-            <li><img src="Assets/Images/ventura.svg" alt="macbook air"></li>
+            <li><img src="../Assets/Images/ventura.svg" alt="macbook air"></li>
             <a href="#">Ventura</a>
           </div>
           <div>
-            <li><img src="Assets/Images/shopmac.svg" alt="macbook air"></li>
+            <li><img src="../Assets/Images/shopmac.svg" alt="macbook air"></li>
             <a href="#">Shop Mac</a>
           </div>
         </ul>
@@ -94,7 +94,7 @@
           <a href="#">Learn More ></a>
         </div>
         <div class="macbook_image_wrapper">
-          <img src="Assets/Images2/macairbanner.jpg" alt="">
+          <img src="../Assets/Images2/macairbanner.jpg" alt="">
         </div>
       </main>
     </section>
@@ -109,7 +109,7 @@
           <a href="#">Learn More ></a>
         </div>
         <div class="macbook_image_wrapper">
-          <img src="Assets/Images2/macpro13.jpg" alt="">
+          <img src="../Assets/Images2/macpro13.jpg" alt="">
         </div>
       </div>
     </section>
