--- a/src/tv&home.html
+++ b/src/tv&home.html
@@ -14,50 +14,50 @@
   <main>
     <section class="homescreen">
       <nav class="mobile-nav-wrapper">
-        <img src="/Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
-        <img src="/Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
-        <img src="/Assets/Images/bag.svg" class="cart" alt="cart" />
+        <img src="../Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
+        <img src="../Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
+        <img src="../Assets/Images/bag.svg" class="cart" alt="cart" />
       </nav>
       <nav class="dekstop-nav-wrapper">
         <ul>
-          <li><a href="/index.html"><img src="/Assets/Images/apple.svg" alt="apple" /></a></li>
+          <li><a href="../index.html"><img src="../Assets/Images/apple.svg" alt="apple" /></a></li>
           <li><a href="#">Store</a></li>
-          <li><a href="/src/mac.html">Mac</a></li>
+          <li><a href="../src/mac.html">Mac</a></li>
           <li>iPad</li>
           <li>iPhone</li>
-          <li><a href="/src/watch.html">Watch</a></li>
+          <li><a href="../src/watch.html">Watch</a></li>
           <li>AirPods</li>
-          <li><a href="/src/tv&home.html">TV & Home</a></li>
-          <li><a href="/src/contactus.html">Contact Us</a></li>
-          <li><a href="/src/accessories.html">Accessories</a></li>
-          <li><a href="/src/login.html">Login</a></li>
-          <li><img src="/Assets/Images/search1.svg" /></li>
+          <li><a href="../src/tv&home.html">TV & Home</a></li>
+          <li><a href="../src/contactus.html">Contact Us</a></li>
+          <li><a href="../src/accessories.html">Accessories</a></li>
+          <li><a href="../src/login.html">Login</a></li>
+          <li><img src="../Assets/Images/search1.svg" /></li>
         </ul>
       </nav>
       <nav class="dekstop-nav2-wrapper">
         <ul>
           <div>
-            <li><img src="/Assets/Images/apple_tv4k_fill_light__b2wtl9srjwb6_large.svg" alt="Tv&Home"></li>
+            <li><img src="../Assets/Images/apple_tv4k_fill_light__b2wtl9srjwb6_large.svg" alt="Tv&Home"></li>
             <a href="#">TV 4K</a>
           </div>
           <div>
-            <li><img src="/Assets/Images/apple_tv_app_light__f6s7yq5zej2a_large.svg" alt="Tv&Home"></li>
+            <li><img src="../Assets/Images/apple_tv_app_light__f6s7yq5zej2a_large.svg" alt="Tv&Home"></li>
             <a href="#">TV App</a>
           </div>
           <div>
-            <li><img src="/Assets/Images/apple_tv_plus_light__fjwmgqxuwomu_large.svg" alt="Tv&Home"></li>
+            <li><img src="../Assets/Images/apple_tv_plus_light__fjwmgqxuwomu_large.svg" alt="Tv&Home"></li>
             <a href="#">TV+</a>
           </div>
           <div>
-            <li><img src="/Assets/Images/homepodmini_light__genrqjukfl26_large.svg" alt="Tv&Home"></li>
+            <li><img src="../Assets/Images/homepodmini_light__genrqjukfl26_large.svg" alt="Tv&Home"></li>
             <a href="#">Home mini</a>
           </div>
           <div>
-            <li><img src="/Assets/Images/homekit_light__bu42vvqsjaj6_large.svg" alt="Tv&Home"></li>
+            <li><img src="../Assets/Images/homekit_light__bu42vvqsjaj6_large.svg" alt="Tv&Home"></li>
             <a href="#">Home App</a>
           </div>
           <div>
-            <li><img src="/Assets/Images/home_accessories_light__eu5v1y6592eu_large.svg" alt="Tv&Home"></li>
+            <li><img src="../Assets/Images/home_accessories_light__eu5v1y6592eu_large.svg" alt="Tv&Home"></li>
             <a href="#">Accesories</a>
           </div>
 
@@ -77,8 +77,8 @@
           </p>
         </div>
         <div class="tv_image_wrapper">
-          <img src="/Assets/Images/hero_tv__d8nngabrofue_medium.png" alt="">
-          <img src="/Assets/Images/hero_homepod_appletv_lockup__ecxlvf764zu6_medium.png" alt="">
+          <img src="../Assets/Images/hero_tv__d8nngabrofue_medium.png" alt="">
+          <img src="../Assets/Images/hero_homepod_appletv_lockup__ecxlvf764zu6_medium.png" alt="">
         </div>
       </main>
     </section>
@@ -91,7 +91,7 @@
           <a href="#">Learn More ></a>
         </div>
         <div class="tv_image_wrapperb">
-          <img src="/Assets/Images/room_filling_sound__zagu3551kwyi_large.jpg" alt="">
+          <img src="../Assets/Images/room_filling_sound__zagu3551kwyi_large.jpg" alt="">
         </div>
         <div class="tv_wrapper">
           <h2>Home Mini</h2>
@@ -100,7 +100,7 @@
           <a href="#">Learn More ></a>
         </div>
         <div class="tv_image_wrapperb">
-          <img src="/Assets/Images/higher_definition__hfivribdc3ue_medium.png" alt="">
+          <img src="../Assets/Images/higher_definition__hfivribdc3ue_medium.png" alt="">
         </div>
       </div>
     </section>
