--- a/src/contactus.html
+++ b/src/contactus.html
@@ -14,30 +14,30 @@
     <main>
         <section class="homescreen">
             <nav class="mobile-nav-wrapper">
-                <img src="/Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
-                <img src="/Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
-                <img src="/Assets/Images/bag.svg" class="cart" alt="cart" />
+                <img src="../Assets/Images/icons8-menu.svg" alt="hamburgerIcon" />
+                <img src="../Assets/Images/icons8-apple-logo.svg" alt="appleIcon" />
+                <img src="../Assets/Images/bag.svg" class="cart" alt="cart" />
             </nav>
             <nav class="dekstop-nav-wrapper">
                 <ul>
-                    <li><a href="/index.html"><img src="/Assets/Images/apple.svg" alt="apple" /></a></li>
+                    <li><a href="../index.html"><img src="../Assets/Images/apple.svg" alt="apple" /></a></li>
                     <li><a href="#">Store</a></li>
-                    <li><a href="/src/mac.html">Mac</a></li>
+                    <li><a href="../src/mac.html">Mac</a></li>
                     <li>iPad</li>
                     <li>iPhone</li>
-                    <li><a href="/src/watch.html">Watch</a></li>
+                    <li><a href="../src/watch.html">Watch</a></li>
                     <li>AirPods</li>
-                    <li><a href="/src/tv&home.html">TV & Home</a></li>
-                    <li><a href="/src/contactus.html">Contact Us</a></li>
-                    <li><a href="/src/accessories.html">Accessories</a></li>
-                    <li><a href="/src/login.html">Login</a></li>
-                    <li><img src="/Assets/Images/search1.svg" /></li>
+                    <li><a href="../src/tv&home.html">TV & Home</a></li>
+                    <li><a href="../src/contactus.html">Contact Us</a></li>
+                    <li><a href="../src/accessories.html">Accessories</a></li>
+                    <li><a href="../src/login.html">Login</a></li>
+                    <li><img src="../Assets/Images/search1.svg" /></li>
                 </ul>
             </nav>
         </section>
         <section class="imgbanner">
             <div class="imgwrapper">
-                <img src="/Assets/Images/employee.jpg" alt="">
+                <img src="../Assets/Images/employee.jpg" alt="">
             </div>
         </section>
         <section class="banner">
@@ -48,19 +48,19 @@
             <div class="support_menu">
                 <ul>
                     <div>
-                        <li><img src="/Assets/Images/hardware.svg" alt=""></li>
+                        <li><img src="../Assets/Images/hardware.svg" alt=""></li>
                         <a href="">Screen Repair ></a>
                     </div>
                     <div>
-                        <li><img src="/Assets/Images/battery.svg" alt=""></li>
+                        <li><img src="../Assets/Images/battery.svg" alt=""></li>
                         <a href="">Battery Repair ></a>
                     </div>
                     <div>
-                        <li><img src="/Assets/Images/receipt.svg" alt=""></li>
+                        <li><img src="../Assets/Images/receipt.svg" alt=""></li>
                         <a href="">Billing ></a>
                     </div>
                     <div>
-                        <li><img src="/Assets/Images/circles.svg" alt=""></li>
+                        <li><img src="../Assets/Images/circles.svg" alt=""></li>
                         <a href="">Forgot passcode ></a>
                     </div>
                 </ul>
@@ -73,23 +73,23 @@
             <div class="support_menu">
                 <ul>
                     <div>
-                        <li><img src="/Assets/Images/phone.png" alt=""></li>
+                        <li><img src="../Assets/Images/phone.png" alt=""></li>
                         <a href="">Phone</a>
                     </div>
                     <div>
-                        <li><img src="/Assets/Images/laptops.png" alt=""></li>
+                        <li><img src="../Assets/Images/laptops.png" alt=""></li>
                         <a href="">Laptop</a>
                     </div>
                     <div>
-                        <li><img src="/Assets/Images/tabs.png" alt=""></li>
+                        <li><img src="../Assets/Images/tabs.png" alt=""></li>
                         <a href="">Tablet</a>
                     </div>
                     <div>
-                        <li><img src="/Assets/Images/profile.png" alt=""></li>
+                        <li><img src="../Assets/Images/profile.png" alt=""></li>
                         <a href="">StoreId</a>
                     </div>
                     <div>
-                        <li><img src="/Assets/Images/dots.png" alt=""></li>
+                        <li><img src="../Assets/Images/dots.png" alt=""></li>
                         <a href="">More Products</a>
                     </div>
                 </ul>
