--- a/src/mac.html
+++ b/src/mac.html
@@ -22,16 +22,16 @@
         <ul>
           <li><a href="../index.html"><img src="../Assets/Images/apple.svg" alt="apple" /></a></li>
           <li><a href="#">Store</a></li>
-          <li><a href="../Assets/src/mac.html">Mac</a></li>
+          <li><a href="../src/mac.html">Mac</a></li>
           <li>iPad</li>
           <li>iPhone</li>
-          <li><a href="../Assets/src/watch.html">Watch</a></li>
+          <li><a href="../src/watch.html">Watch</a></li>
           <li>AirPods</li>
-          <li><a href="../Assets/src/tv&home.html">TV & Home</a></li>
-          <li><a href="./Assets/src/contactus.html">Contact Us</a></li>
-          <li><a href="../Assets/src/accessories.html">Accessories</a></li>
-          <li><a href="../Assets/src/login.html">Login</a></li>
-          <li><img src="../Assets/Images/search1.svg" /></li>
+          <li><a href="../src/tv&home.html">TV & Home</a></li>
+          <li><a href="../src/contactus.html">Contact Us</a></li>
+          <li><a href="../src/accessories.html">Accessories</a></li>
+          <li><a href="../src/login.html">Login</a></li>
+          <li><img src="../Images/search1.svg" /></li>
         </ul>
       </nav>
       <nav class="dekstop-nav2-wrapper">
