--- a/src/mac.html
+++ b/src/mac.html
@@ -31,7 +31,7 @@
           <li><a href="../src/contactus.html">Contact Us</a></li>
           <li><a href="../src/accessories.html">Accessories</a></li>
           <li><a href="../src/login.html">Login</a></li>
-          <li><img src="../Images/search1.svg" /></li>
+          <li><img src="../Assets/Images/search1.svg" /></li>
         </ul>
       </nav>
       <nav class="dekstop-nav2-wrapper">
