--- a/src/mac.html
+++ b/src/mac.html
@@ -94,7 +94,7 @@
           <a href="#">Learn More ></a>
         </div>
         <div class="macbook_image_wrapper">
-          <img src="../Assets/Images2/macairbanner.jpg" alt="">
+          <img src="../Assets/Images/macairbanner.jpg" alt="">
         </div>
       </main>
     </section>
@@ -109,7 +109,7 @@
           <a href="#">Learn More ></a>
         </div>
         <div class="macbook_image_wrapper">
-          <img src="../Assets/Images2/macpro13.jpg" alt="">
+          <img src="../Assets/Images/macpro13.jpg" alt="">
         </div>
       </div>
     </section>
