--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         <div class="iphone14_links">
           <div class="learn_more">
             <a class="link_learn"> Learn more </a>
-            <img src="Assets/Images/right.svg" />
+            <img src="Assets/Images/right.svg" alt="rightarrow" />
           </div>
           <div class="buy">
             <a class="buy_link"> Buy </a>
-            <img src="Assets/Images/right.svg" />
+            <img src="Assets/Images/right.svg" alt="rightarrow" />
           </div>
         </div>
         <div class="iphone14pro-hero">
@@ -84,11 +84,11 @@
           <div class="iphone14_links">
             <div class="learn_more">
               <a class="link_learn"> Learn more </a>
-              <img src="Assets/Images/right.svg" />
+              <img src="Assets/Images/right.svg" alt="rightarrow" />
             </div>
             <div class="buy">
               <a class="buy_link"> Buy </a>
-              <img src="Assets/Images/right.svg" />
+              <img src="Assets/Images/right.svg" alt="rightarrow" />
             </div>
           </div>
           <div class="smart-watch-1-image">
@@ -102,11 +102,11 @@
           <div class="iphone14_links">
             <div class="learn_more">
               <a class="link_learn"> Learn more </a>
-              <img src="Assets/Images/right.svg" />
+              <img src="Assets/Images/right.svg" alt="rightarrow" />
             </div>
             <div class="buy">
               <a class="buy_link"> Buy </a>
-              <img src="Assets/Images/right.svg" />
+              <img src="Assets/Images/right.svg" alt="rightarrow" />
             </div>
           </div>
           <div class="smart-watch-1-image">
