--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title></title>
+  <title>HilariousHTML</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="Assets/Style/style.css" />
@@ -21,17 +21,17 @@
       <nav class="dekstop-nav-wrapper">
         <ul>
           <li><img src="Assets/Images/apple.svg" alt="apple" /></li>
-           <li><a href="#">Store</a></li>
-                    <li><a href="src/mac.html">Mac</a></li>
-                    <li>iPad</li>
-                    <li>iPhone</li>
-                    <li><a href="src/watch.html">Watch</a></li>
-                    <li>AirPods</li>
-                    <li><a href="src/tv&home.html">TV & Home</a></li>
-                    <li><a href="src/contactus.html">Contact Us</a></li>
-                    <li><a href="src/accessories.html">Accessories</a></li>
-                    <li><a href="src/login.html">Login</a></li>
-          <li><img src="Assets/Images/search1.svg" /></li>
+          <li><a href="#">Store</a></li>
+          <li><a href="src/mac.html">Mac</a></li>
+          <li>iPad</li>
+          <li>iPhone</li>
+          <li><a href="src/watch.html">Watch</a></li>
+          <li>AirPods</li>
+          <li><a href="src/tv&home.html">TV & Home</a></li>
+          <li><a href="src/contactus.html">Contact Us</a></li>
+          <li><a href="src/accessories.html">Accessories</a></li>
+          <li><a href="src/login.html">Login</a></li>
+          <li><img src="Assets/Images/search1.svg" alt="search" /></li>
         </ul>
       </nav>
     </section>
@@ -44,15 +44,15 @@
         <div class="iphone14_links">
           <div class="learn_more">
             <a class="link_learn"> Learn more </a>
-            <img src="Assets/Images/right.svg" />
+            <img src="Assets/Images/right.svg" alt="right" />
           </div>
           <div class="buy">
             <a class="buy_link"> Buy </a>
-            <img src="Assets/Images/right.svg" />
+            <img src="Assets/Images/right.svg" alt="right" />
           </div>
         </div>
         <div class="iphone_image_wrapper">
-          <img src="Assets/Images/Iphone_14.jpg" />
+          <img src="Assets/Images/Iphone_14.jpg" alt="mobile" />
         </div>
       </main>
     </section>
